--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - calico-typha.yaml
+  - calico.yaml
 patchesStrategicMerge:
   - calico-patch.yaml
