--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,6 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - apiserver-certificate.yaml
+  - apiserver-pdb.yaml
+  - apiserver.yaml
   - calico-typha.yaml
+  - felix-metrics-svc.yaml
 patchesStrategicMerge:
   - calico-patch.yaml
+  - apiserver-patch.yaml
