--- a/base/apiserver-patch.yaml
+++ b/base/apiserver-patch.yaml
@@ -4,3 +4,7 @@ metadata:
   name: calico-apiserver
 spec:
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
