--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -7,5 +7,7 @@ resources:
   - calico-typha.yaml
   - felix-metrics-svc.yaml
 patchesStrategicMerge:
-  - calico-patch.yaml
+  - calico-env-patch.yaml
+  - calico-init-patch.yaml
+  - calico-resources-patch.yaml
   - apiserver-patch.yaml
