--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -7,7 +7,8 @@ resources:
   - calico-typha.yaml
   - felix-metrics-svc.yaml
 patchesStrategicMerge:
+  - apiserver-args.yaml
+  - apiserver-rolling-strategy.yaml
   - calico-env-patch.yaml
   - calico-init-patch.yaml
   - calico-resources-patch.yaml
-  - apiserver-patch.yaml
