Schedule calico-typha on master nodes

--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -12,4 +12,5 @@ patches:
   - path: calico-env-patch.yaml
   - path: calico-init-patch.yaml
   - path: calico-resources-patch.yaml
+  - path: calico-typha-node-selector.yaml
   - path: calico-typha-tolerations.yaml
