Enable metrics for Typha (#28)
* Enable metrics for Typha

* Add Typha metrics Service

--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - apiserver-certificate.yaml
   - apiserver-pdb.yaml
   - apiserver.yaml
+  - calico-typha-metrics-service.yaml
   - calico-typha.yaml
   - felix-metrics-svc.yaml
 patches:
@@ -17,4 +18,5 @@ patches:
   - path: calico-env-patch.yaml
   - path: calico-init-patch.yaml
   - path: calico-resources-patch.yaml
+  - path: calico-typha-metrics-patch.yaml
   - path: calico-typha-node-selector.yaml
