--- a/base/apiserver-rbac-pacth.yaml
+++ b/base/apiserver-rbac-pacth.yaml
@@ -3,6 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: calico-crds-addon
+  labels:
+    rbac.authorization.k8s.io/aggregate-to-calico-crds: "true"
 rules:
   - apiGroups:
       - crd.projectcalico.org
@@ -17,16 +19,3 @@ rules:
       - create
       - update
       - delete
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: calico-apiserver-access-crds-addon
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: calico-crds-addon
-subjects:
-  - kind: ServiceAccount
-    name: calico-apiserver
-    namespace: kube-system
